--- a/index.html
+++ b/index.html
@@ -122,10 +122,10 @@ by <a class="url fn" href="/author/alexis-metaireau.html">subond</a>
                 Links
                 </li>
 
-                <li><a href="http://getpelican.com/">Pelican</a></li>
-                <li><a href="http://python.org/">Python.org</a></li>
-                <li><a href="http://jinja.pocoo.org/">Jinja2</a></li>
-                <li><a href="#">You can modify those links in your config file</a></li>
+                <li><a href="http://www.bootcss.com/p/git-guide">Git</a></li>
+                <li><a href="https://gitlab.eurecom.fr/oai/openairinterface5g/wikis/home">OAI5g</a></li>
+                <li><a href="http://www.adnlab.com/">SDNLAB</a></li>
+                <li><a href="http://www.sdnap.com/">SDNAP</a></li>
             </ul>
             </div>
 
@@ -137,8 +137,8 @@ by <a class="url fn" href="/author/alexis-metaireau.html">subond</a>
                 Social
                 </li>
 
-                <li><a href="#">You can add links in your config file</a></li>
-                <li><a href="#">Another social link</a></li>
+                <li><a href="https://github.com/yusubond">Github</a></li>
+                <li><a href="http://weibo.com/ybconly">Weibo</a></li>
             </ul>
             </div>
             </div>
