--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@ by <a class="url fn" href="/author/alexis-metaireau.html">subond</a>
 
                 <li><a href="http://www.bootcss.com/p/git-guide">Git</a></li>
                 <li><a href="https://gitlab.eurecom.fr/oai/openairinterface5g/wikis/home">OAI5g</a></li>
-                <li><a href="http://www.adnlab.com/">SDNLAB</a></li>
+                <li><a href="http://www.sdnlab.com/">SDNLAB</a></li>
                 <li><a href="http://www.sdnap.com/">SDNAP</a></li>
             </ul>
             </div>
@@ -147,7 +147,7 @@ by <a class="url fn" href="/author/alexis-metaireau.html">subond</a>
     </div>     </div>
 <footer>
 <br />
-<p><a href="">Milestone</a> &copy; Yu Bangchao 2010</p>
+<p><a href="">Milestone</a> &copy; Yu Bangchao 2016</p>
 </footer>
 
 </div> <!-- /container -->
