--- a/index.html
+++ b/index.html
@@ -67,83 +67,90 @@ by <a class="url fn" href="/author/alexis-metaireau.html">subond</a>
 
 
         </div>
-#我的第一篇博客开始
+<!--我的第一篇博客开始-->
         <div>
-          <p>说明：本教程使用的系统平台为ubuntu系统
-
-          </p>
-          <h3>Github pages</h3>
-          <p>注册Github，并创建一个名为username.github.io的版本库。
-          </p>
-          <h3>配置本地环境</h3>
-          <ul>
-          <li><p>安装Pelican和Markdown</p>
-          <p>Pelican是一套开源的使用Python编写的博客静态生成，可以添加文章和创建页面，可使用Markdown，reStructuredText和AsiiDoc的格式来书写，同时使用Disqus评论系统，支持
-          RSS和Atom输出，插件，主题，代码高亮等功能。</p>
-          <p>安装Pelican有很多方法，一般采用python的包管理器pip进行安装。</p>
-          <pre><code>$ sudo apt-get install python-pip
-          $ sudo pip install pelican
-          $ sudo pip install markdown</code></pre>
-          </li>
-          <li><p>创建博客</p>
-          <p>创建博客目录，然后使用快速生成，具体如下：</p>
-          <pre><code>$ mkdir blog
-          $ cd blog
-          $ pelican-quickstart</code></pre>
-          <p>执行pelican-quicstart命令后，会提示博客的配置选项，根据提示操作即可，除必填项之外，其他选择默认即可。如果有需要
-          可以在之后的<code>pelicanconf.py</code>文件进行修改。完成之后，会出现Pelican框架，如下</p>
-          <pre><code>bolg
-          |__content             #存放输入的Markdown文件
-          |__output              #存放最终生成的静态博客网页文件
-          |__develop_server.sh   #本地测试服务器文件
-          |__Makefile            #管理博客的Makefile
-          |__pelicanconf.py      #博客配置文件
-          |__publishconf.py      #发布文件，可删除</code></pre>
-          </li>
-          </ul>
-          <h3>撰写博客</h3>
-          <p>完成博客主题搭建后，使用Markdown语法书写博客，完成后保存在<code>content</code>目录下。
-
-          </p>
-          <pre><code>Title: My super title
-          Date: 2010-12-03 10:20
-          Category: Python
-          Tags: pelican, publishing
-          Slug: my-super-post
-          Author: Alexis Metaireau
-          Summary: Short version for index and feeds
-
-          This is the content of my super blog post.</code></pre>
-          <p>完成之后，在<code>blog</code>目录下，执行如下命令：
-
-          </p>
-          <pre><code>$ make html
-          $ ./develop_server.sh</code></pre>
-          <p>之后，在浏览器中输入<a href="http://localhost:8000">http://localhost:8000</a> 即可看到博客效果。
-          </p>
-          <h3>发布博客</h3>
-          <p>之前我们已经在Github上创建了仓库，现在我们就将本地文件搬到远程仓库中，进入<code>output</code>目录下，具体指令如下：
-
-          </p>
-          <pre><code>$ git init
-          $ git add .
-          $ git remote add origin https://github.com/username/username.github.io
-          $ git pull origin master
-          $ git commit -m "First update"
-          $ git push origin master</code></pre>
-          <p>完成博客发布后，访问<a href="http://username.github.io">http://username.github.io</a> 即可。
-          </p>
-          <h3>附：Git简易教程</h3>
-          <pre><code>$ git init                   #把当前目录变成git可管理的repository
-          $ git add &lt;files&gt;            #添加文件至缓存区
-          $ git commit -m "信息说明"   #提交文件
-          $ git remote add origin &lt;server&gt;   #添加远程服务器
-          $ git remote set-url origin &lt;server&gt;   #修改远程服务器地址
-          $ git push origin master     #推送到远程服务器
-          $ git status    #查看当前各文件状态，</code></pre>
+<p>说明：本教程使用的系统平台为ubuntu系统14.04。
+</p>
+<h3>Github pages</h3>
+<p>注册Github，并创建一个名为<i>username</i>.github.io的版本库。注意<i>username</i>为自己的用户名。
+</p>
+<h3>配置本地环境</h3>
+<ul>
+<li><p>安装Pelican和Markdown</p>
+<p>Pelican是一套开源的使用Python编写的博客静态生成，可以添加文章和创建页面，可使用Markdown，reStructuredText和AsiiDoc的格式来书写，同时使用Disqus评论系统，支持
+RSS和Atom输出，插件，主题，代码高亮等功能。</p>
+<p>安装Pelican有很多方法，一般采用python的包管理器pip进行安装。</p>
+<pre>
+$ sudo apt-get install python-pip
+$ sudo pip install pelican
+$ sudo pip install markdown
+</pre>
+</li>
+<li><p>创建博客</p>
+<p>创建博客目录，然后使用快速生成，具体如下：</p>
+<pre>
+$ mkdir blog
+$ cd blog
+$ pelican-quickstart</pre>
+<p>执行pelican-quicstart命令后，会提示博客的配置选项，根据提示操作即可，除必填项之外，其他选择默认即可。如果有需要
+可以在之后的<code>pelicanconf.py</code>文件进行修改。完成之后，会出现Pelican框架，如下</p>
+<pre>bolg
+|__content             #存放输入的Markdown文件
+|__output              #存放最终生成的静态博客网页文件
+|__develop_server.sh   #本地测试服务器文件
+|__Makefile            #管理博客的Makefile
+|__pelicanconf.py      #博客配置文件
+|__publishconf.py      #发布文件，可删除
+</pre>
+</li>
+</ul>
+<h3>撰写博客</h3>
+<p>完成博客主题搭建后，使用Markdown语法书写博客，完成后保存在<code>content</code>目录下。
+</p>
+<pre>
+Title: My super title
+Date: 2010-12-03 10:20
+Category: Python
+Tags: pelican, publishing
+Slug: my-super-post
+Author: Alexis Metaireau
+Summary: Short version for index and feeds
+This is the content of my super blog post.
+</pre>
+<p>完成之后，在<code>blog</code>目录下，执行如下命令：
+</p>
+<pre>
+$ make html
+$ ./develop_server.sh
+</pre>
+<p>之后，在浏览器中输入<a href="http://localhost:8000">http://localhost:8000</a> 即可看到博客效果。
+</p>
+<h3>发布博客</h3>
+<p>之前我们已经在Github上创建了仓库，现在我们就将本地文件搬到远程仓库中，进入<code>output</code>目录下，具体指令如下：
+</p>
+<pre>
+$ git init
+$ git add .
+$ git remote add origin https://github.com/username/username.github.io
+$ git pull origin master
+$ git commit -m "First update"
+$ git push origin master
+</pre>
+<p>完成博客发布后，访问<a href="http://username.github.io">http://username.github.io</a> 即可。
+</p>
+<h3>附：Git简易教程</h3>
+<pre>
+$ git init                   #把当前目录变成git可管理的repository
+$ git add &lt;files&gt;            #添加文件至缓存区
+$ git commit -m "信息说明"   #提交文件
+$ git remote add origin &lt;server&gt;   #添加远程服务器
+$ git remote set-url origin &lt;server&gt;   #修改远程服务器地址
+$ git push origin master     #推送到远程服务器
+$ git status    #查看当前各文件状态
+</pre>
 
         </div>
-#我的第一篇博客结束
+<!--我的第一篇博客结束-->
         <hr />
     </div>
 
