--- a/archives.html
+++ b/archives.html
@@ -58,7 +58,7 @@
     <tbody>
         <tr>
         <td>03 12月 2010</td>
-        <td><a href='/my-super-post.html'>My super title</a></td>
+        <td><a href='/pages/2016/04/pelican-github-chuang-jian-bo-ke.html'>利用Pelican+Github&nbsp;pages搭建个人博客</a></td>
         </tr>
     </tbody>
 </table>
