--- a/index.html
+++ b/index.html
@@ -221,6 +221,7 @@ $ git status    #查看当前各文件状态
 
                 <li><a href="https://github.com/yusubond">Github</a></li>
                 <li><a href="http://weibo.com/ybconly">Weibo</a></li>
+                <li><a href="http://350959853.qzone.qq.com">Qzone</a></li>
             </ul>
             </div>
             </div>
