--- a/archives.html
+++ b/archives.html
@@ -57,7 +57,7 @@
 <table class="table">
     <tbody>
         <tr>
-        <td>03 12月 2010</td>
+        <td>26th Apr 2016</td>
         <td><a href='/pages/2016/04/pelican-github-chuang-jian-bo-ke.html'>利用Pelican+Github&nbsp;pages搭建个人博客</a></td>
         </tr>
     </tbody>
