--- a/pages/my-super-post-demo.html
+++ b/pages/my-super-post-demo.html
@@ -56,7 +56,7 @@
             <h1>My super title</h1>
 五 03 十二月 2010
 
-by <a class="url fn" href="/author/alexis-metaireau.html">Alexis Metaireau</a>
+by <a class="url fn" href="/author/alexis-metaireau.html">subond</a>
 
 
 
@@ -106,7 +106,6 @@ by <a class="url fn" href="/author/alexis-metaireau.html">Alexis Metaireau</a>
                 Categories
                 </li>
 
-                <li><a href="/category/python.html">Python</a></li>
                 <li><a href="/category/life.html">Life</a></li>
                 <li><a href="/category/tech.html">Tech</a></li>
 
