--- a/index.html
+++ b/index.html
@@ -161,8 +161,7 @@ by <a class="url fn" href="./author/subond.html">subond</a>
         <pre>
         $ sudo apt-get install python-pip
         $ sudo pip install pelican
-        $ sudo pip install markdown
-        </pre>
+        $ sudo pip install markdown</pre>
         </li>
         <li><p>创建博客</p>
         <p>创建博客目录，然后使用快速生成，具体如下：</p>
