--- a/archives.html
+++ b/archives.html
@@ -61,7 +61,7 @@
         <td><a href='/pages/2016/04/pelican-github-chuang-jian-bo-ke2.html'>利用Pelican+Github&nbsp;pages搭建个人博客</a></td>
         </tr>
         <td>29th Apr 2016</td>
-        <td><a href='/pages/2016/04/pelican-github-chuang-jian-bo-ke1.html'>Git学习手记</a></td>
+        <td><a href='../pages/2016/04/git-xue-xi-shou-ji.html'>Git学习手记</a></td>
         </tr>
     </tbody>
 </table>
