--- a/archives.html
+++ b/archives.html
@@ -93,7 +93,9 @@
                 Categories
                 </li>
 
-                <li><a href="/category/python.html">Python</a></li>
+                <li><a href="/category/life.html">Life</a></li>
+                <li><a href="/category/tech.html">Tech</a></li>
+                <li><a href="/category/note.html">Note</a></li>
 
             </ul>
             </div>
