--- a/archives.html
+++ b/archives.html
@@ -60,8 +60,13 @@
         <td>26th Apr 2016</td>
         <td><a href='../pages/2016/04/pelican-github-chuang-jian-bo-ke2.html'>利用Pelican+Github&nbsp;pages搭建个人博客</a></td>
         </tr>
+        <tr>
         <td>29th Apr 2016</td>
         <td><a href='../pages/2016/04/git-xue-xi-shou-ji.html'>Git学习手记</a></td>
+        </tr>
+        <tr>
+        <td>10th May 2016</td>
+        <td><a href='../pages/2016/05/LTE-xi-tong-wang-luo-jia-gou.html'>Git学习手记</a></td>
         </tr>
     </tbody>
 </table>
