--- a/tags.html
+++ b/tags.html
@@ -81,7 +81,9 @@
                 Categories
                 </li>
 
-                <li><a href="/category/python.html">Python</a></li>
+                <li><a href="/category/life.html">Life</a></li>
+                <li><a href="/category/tech.html">Tech</a></li>
+                <li><a href="/category/note.html">Note</a></li>
 
             </ul>
             </div>
@@ -117,7 +119,7 @@
     </div>     </div>
 <footer>
 <br />
-<p><a href="">Milestone</a> &copy; Yu Bangchao 2016</p>
+<p><a href="http://www.subond.com/">Milestone</a> &copy; Yu Bangchao 2016</p>
 </footer>
 
 </div> <!-- /container -->
