--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@ $ pelican-quickstart</pre>
     </div>     </div>
 <footer>
 <br />
-<p><a href=".">Milestone</a> &copy; Yu Bangchao 2016</p>
+<p><a href="http://www.subond.com/">Milestone</a> &copy; Yu Bangchao 2016</p>
 </footer>
 
 </div> <!-- /container -->
