--- a/index.html
+++ b/index.html
@@ -123,9 +123,9 @@ by <a class="url fn" href="./author/subond.html">subond</a>
               <p><center><img alt="S1-MME接口协议栈" src="/images/s1-mme-xie-yi-zhan.jpg"></center></p>
               <p><center>图3-2&nbsp;S1-MME接口协议栈</center></p>
             </ul>
-            <p><b>说明</b><hr/>无线接口可分为三个协议层：物理层（L1）、数据链路层（L2）和网络层（L3）。<hr/>1、物理层主要为高层业务提供传输的无线物理通道；<hr/>2、数据链路层包括MAC(Medium Access Control)、RLC(Radio Link Control)、
-            BMC(Broadcast/Multicast Control)和PDCP(Packet Data Convergence Protocol)四个子层。<hr/>3、网络层包括接入层中的子层RRC子层和非接入层的MM(Mobility Management)和CC(Call Control)。</p>
-            <p><center><img alt="无线接口协议"　src="http://g.hiphotos.baidu.com/baike/c0%3Dbaike80%2C5%2C5%2C80%2C26/sign=e71d5a18f503738dca470470d272db34/5882b2b7d0a20cf46fb1db6775094b36acaf9960.jpg"></center></p>
+            <p><b>说明</b><br/>无线接口可分为三个协议层：物理层（L1）、数据链路层（L2）和网络层（L3）。<br/>1、物理层主要为高层业务提供传输的无线物理通道；<br/>2、数据链路层包括MAC(Medium Access Control)、RLC(Radio Link Control)、
+            BMC(Broadcast/Multicast Control)和PDCP(Packet Data Convergence Protocol)四个子层。<br/>3、网络层包括接入层中的子层RRC子层和非接入层的MM(Mobility Management)和CC(Call Control)。</p>
+            <p><center><img alt="无线接口协议"　src="/images/Uu-jie-kou-xie-yi.jpg"></center></p>
             <h3>X2接口</h3>
             <p>X2接口是eNodeB与eNodeB之间的接口，采用了与S1接口一致的原则，其用户平面协议接口与控制平面协议接口均与S1接口类似。</p>
             <ul>
