--- a/index.html
+++ b/index.html
@@ -416,6 +416,7 @@ $ pelican-quickstart</pre><p>...</p>
 
                 <li><a href="https://github.com/yusubond">Github</a></li>
                 <li><a href="http://weibo.com/ybconly">Weibo</a></li>
+                <li><a href="http://weibo.com/u/2136552257">Weibo</a></li>
             </ul>
             </div>
             </div>
