--- a/pages/pages_demo.html
+++ b/pages/pages_demo.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>Milestone - Alexis Metaireau</title>
+    <title>Milestone</title>
     <meta name="description" content="">
     <meta name="author" content="Yu Bangchao">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -34,7 +34,7 @@
              <span class="icon-bar"></span>
          </a>
 
-        <a class="brand" href="..">Milestone</a>
+        <a class="brand" href="../../../..">Milestone</a>
 
         <div class="nav-collapse">
         <ul class="nav">
@@ -51,82 +51,36 @@
     <div class="row">
 
         <div class="span9">
-
-
-
-
-
     <div class='article'>
         <div class="content-title">
-            <a href="/author/subond.html"><h1>About me</h1></a>
-2016-05-03
+            <h1>基本UDP套接字编程</h1>
+2016-05-24
 
-by <a class="url fn" href="../author/subond.html">subond</a>
-
-
+by <a class="url fn" href="/author/subond.html">subond</a>
 
 
 
         </div>
-
-        <div><h1>于邦超</h1>
-          <p>北京邮电大学·信息与通信工程学院·电子信息工程</p>
-          <table width="200" height="100" algin="left">
-            <tr><td>Email:</td><td>yubc0321@gmail.com</td></tr>
-            <tr><td>Github:</td><td><a herf="https://github.com/yusubond">github.com/yusubond</a></td></tr>
-            <tr><td>Blog:</td><td><a herf="http://www.subond.com">www.subond.com</a></td></tr>
-
-          </table>
-
-
-          <hr size="5px" color="#FF0000"/>
-          <h2>教育经历</h2>
-
-               <table width="600" height="50" algin="left">
-                 <tr><td>2015.09-至今</td><td>北京邮电大学</td><td>信息与通信工程学院</td><td>硕士研究生</td></tr>
-                 <tr><td>2011.09-2015.06</td><td>北京化工大学</td><td>通信工程</td><td>本科</td></tr>
-               </table>
-
-          <hr size="3px" color="#0000FF"/>
-          <h2>社会实践</h2>
-          <table width="600" height="50" algin="left">
-            <tr><td><b>2013.09-2014.06</b></td><td><b>北京化工大学职业生涯规划协会</b></td><td><b>会长</b></td></tr>
-          </table>
-            <ul>
-              <li>负责管理协会日程事务，并策划组织各种赛事及活动</li>
-              <li>主持编撰职协期刊《征程》，普及学业、职业规划理念，前后共发行1000多本</li>
-              <li>协助学校就业中心开展“学业·职业规划大赛”，负责赛事流程及选手培训</li>
-              <li>工作中，锻炼了项目策划、组织能力，同时提升了交流沟通能力，团队合作意识和执行力有了显著提高</li>
-            </ul>
-          <table width="600" height="50" algin="left">
-            <tr><td><b>2013.07-2013.08</b></td><td><b>浙江·绍兴暑期社会实践团</b></td><td><b>副队长</b></td></tr>
-          </table>
-          <ul>
-            <li>确定主题，协助队长负责前期的线路策划工作</li>
-            <li>制定整个团队的日程安排，活动中注意保护团员安全</li>
-            <li>活动后进行总结，并负责相关材料的上报工作</li>
-          </ul>
-          <hr size="3px" color="#0000FF"/>
-
-
-
+        <div>
 
         </div>
-        <hr />
+
+        <hr>
+
+        <h2>Comments</h2>
+<div id="disqus_thread"></div>
+<script type="text/javascript">
+    var disqus_shortname = 'subond';
+    var disqus_title = 'My super title';
+
+    (function() {
+        var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
+        dsq.src = 'https://' + disqus_shortname + '.disqus.com/embed.js';
+        (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
+    })();
+</script>
+<noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
     </div>
-
-<div class="pagination">
-<ul>
-    <li class="prev disabled"><a href="#">&larr; Previous</a></li>
-
-    <li class="active"><a href="/author/alexis-metaireau.html">1</a></li>
-
-    <li class="next disabled"><a href="#">&rarr; Next</a></li>
-
-</ul>
-</div>
-
-
         </div>
 
         <div class="span3">
@@ -153,7 +107,9 @@ by <a class="url fn" href="../author/subond.html">subond</a>
                 Categories
                 </li>
 
-                <li><a href="/category/python.html">Python</a></li>
+                <li><a href="/category/life.html">Life</a></li>
+                <li><a href="/category/tech.html">Tech</a></li>
+                <li><a href="/category/note.html">Note</a></li>
 
             </ul>
             </div>
@@ -190,7 +146,7 @@ by <a class="url fn" href="../author/subond.html">subond</a>
     </div>     </div>
 <footer>
 <br />
-<p><a href="">Milestone</a> &copy; Yu Bangchao 2010</p>
+<p><a href="http://www.subond.com/">Milestone</a> &copy; Yu Bangchao 2016</p>
 </footer>
 
 </div> <!-- /container -->
