--- a/index.html
+++ b/index.html
@@ -41,6 +41,9 @@
         <ul class="nav">
           <li><a href="./author/subond.html">About me</a></li>
         </ul>
+        <form class="navbar-search pull-right" action="/search.html">
+          <input  type="text" class="search-query" placeholder="Search" name="q" id="s">
+        </form>
         </div>
 
     </div>
@@ -399,7 +402,7 @@ $ pelican-quickstart</pre><p>...</p>
                 Links
                 </li>
 
-                <li><a href="http://www.bootcss.com/p/git-guide">Git</a></li>
+                <li><a href="http://www.opensource5g.org">OpenSource5G</a></li>
                 <li><a href="https://gitlab.eurecom.fr/oai/openairinterface5g/wikis/home">OAI5g</a></li>
                 <li><a href="http://www.sdnlab.com/">SDNLAB</a></li>
                 <li><a href="http://www.sdnap.com/">SDNAP</a></li>
@@ -416,7 +419,7 @@ $ pelican-quickstart</pre><p>...</p>
 
                 <li><a href="https://github.com/yusubond">Github</a></li>
                 <li><a href="http://weibo.com/ybconly">Weibo</a></li>
-                <li><a href="http://weibo.com/u/2136552257">Weibo</a></li>
+
             </ul>
             </div>
             </div>
@@ -430,6 +433,8 @@ $ pelican-quickstart</pre><p>...</p>
 
 </div> <!-- /container -->
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+<script src="http://twitter.github.com/bootstrap/assets/js/bootstrap-collapse.js"></script>
+<script>var _gaq=[['_setAccount','UA-45955656-1'],['_trackPageview']];(function(d,t){var g=d.createElement(t),s=d.getElementsByTagName(t)[0];g.src='//www.google-analytics.com/ga.js';s.parentNode.insertBefore(g,s)}(document,'script'))</script>
 <script src="/theme/bootstrap-collapse.js"></script>
 
 </body>
