--- a/archives.html
+++ b/archives.html
@@ -124,7 +124,7 @@
                 Links
                 </li>
                 <li><a href="http://www.opensource5g.org">OpenSource5G</a></li>
-                <li><a href="https://gitlab.eurecom.fr/oai/openairinterface5g/wikis/home">OAI5g</a></li>
+                <li><a href="https://gitlab.eurecom.fr/oai/openairinterface5g/wikis/home">OpenAirInterface5g</a></li>
                 <li><a href="http://www.sdnlab.com/">SDNLAB</a></li>
                 <li><a href="http://www.sdnap.com/">SDNAP</a></li>
             </ul>
