--- a/index.html
+++ b/index.html
@@ -392,6 +392,7 @@ $ pelican-quickstart</pre><p>...</p>
                 <li><a href="/category/life.html">Life</a></li>
                 <li><a href="/category/tech.html">Tech</a></li>
                 <li><a href="/category/note.html">Note</a></li>
+                <li><a href="/pages/tips.html">Note</a></li>
             </ul>
             </div>
 
