--- a/pages/tips.html
+++ b/pages/tips.html
@@ -63,9 +63,9 @@ by <a class="url fn" href="/author/subond.html">subond</a>
         </div>
         <div>
           <ol type="1">
-            <li><h4>C编程</h4></li>
+            <li><h2>C编程</h2></li>
             <p><b>问题</b>:头文件中全局函数多次引用出现重定义问题</p>
-            <p><b>解决方法：</b>方法1：不要在头文件中定义函数，而将声明和实现分别写在.h和.cpp中<br/>方法2：.h中实现的函数加上static</p>
+            <p><b>解决方法：</b><br/>方法1：不要在头文件中定义函数，而将声明和实现分别写在.h和.cpp中<br/>方法2：.h中实现的函数加上static</p>
         </div>
 
         <hr>
