--- a/archives.html
+++ b/archives.html
@@ -116,6 +116,7 @@
                 <li><a href="/category/life.html">Life</a></li>
                 <li><a href="/category/tech.html">Tech</a></li>
                 <li><a href="/category/note.html">Note</a></li>
+                <li><a href="/pages/tips.html">Tips</a></li>
 
             </ul>
             </div>
