--- a/authors.html
+++ b/authors.html
@@ -80,10 +80,11 @@
                 <li class="nav-header">
                 Categories
                 </li>
-                
+
                 <li><a href="/category/life.html">Life</a></li>
                 <li><a href="/category/tech.html">Tech</a></li>
                 <li><a href="/category/note.html">Note</a></li>
+                <li><a href="/pages/tips.html">Tips</a></li>
 
             </ul>
             </div>
