--- a/pages/tips.html
+++ b/pages/tips.html
@@ -63,9 +63,17 @@ by <a class="url fn" href="/author/subond.html">subond</a>
         </div>
         <div>
           <ol type="1">
-            <li><h2>C编程</h2></li>
+            <li><h4>C编程</h4></li>
             <p><b>问题</b>:头文件中全局函数多次引用出现重定义问题</p>
             <p><b>解决方法：</b><br/>方法1：不要在头文件中定义函数，而将声明和实现分别写在.h和.cpp中<br/>方法2：.h中实现的函数加上static</p>
+            <li><h4>Java语法：import</h4></li>
+            <p>import:导入包中的类，语法如下：</p>
+            <pre>import package1.package2.classname;</pre>
+            <p>package为包名，classname为类名。例如：</p>
+            <pre>import java.util.Date;     //导入java.util包下的Date类</pre>
+            <pre>import java.swing.*;       //导入java.swing包下的所有类</pre>
+            <p><b>注意</b>:import只能导入包所包含的类，而不能导入包。</p>
+          </ol>
         </div>
 
         <hr>
