--- a/pages/tips.html
+++ b/pages/tips.html
@@ -71,8 +71,7 @@ by <a class="url fn" href="/author/subond.html">subond</a>
             <p>import:导入包中的类，语法如下：</p>
             <pre>import package1.package2.classname;</pre>
             <p>package为包名，classname为类名。例如：</p>
-            <pre>import java.util.Date;     //导入java.util包下的Date类</pre>
-            <pre>import java.swing.*;       //导入java.swing包下的所有类</pre>
+            <pre>import java.util.Date;     //导入java.util包下的Date类<br/>import java.swing.*;       //导入java.swing包下的所有类</pre>
             <p><b>注意</b>:import只能导入包所包含的类，而不能导入包。</p>
           </ol>
         </div>
