--- a/tags.html
+++ b/tags.html
@@ -38,8 +38,11 @@
 
         <div class="nav-collapse">
         <ul class="nav">
-
+          <li><a href="./author/subond.html">About me</a></li>
         </ul>
+        <form class="navbar-search pull-right" action="/search.html">
+          <input  type="text" class="search-query" placeholder="Search" name="q" id="s">
+        </form>
         </div>
 
     </div>
@@ -84,6 +87,7 @@
                 <li><a href="/category/life.html">Life</a></li>
                 <li><a href="/category/tech.html">Tech</a></li>
                 <li><a href="/category/note.html">Note</a></li>
+                <li><a href="/category/tips.html">Tips</a></li>
 
             </ul>
             </div>
@@ -94,8 +98,8 @@
                 <li class="nav-header">
                 Links
                 </li>
-                <li><a href="http://www.bootcss.com/p/git-guide">Git</a></li>
-                <li><a href="https://gitlab.eurecom.fr/oai/openairinterface5g/wikis/home">OAI5g</a></li>
+                <li><a href="http://www.opensource5g.org">OpenSource5G</a></li>
+                <li><a href="https://gitlab.eurecom.fr/oai/openairinterface5g/wikis/home">OpenAirInterface5g</a></li>
                 <li><a href="http://www.sdnlab.com/">SDNLAB</a></li>
                 <li><a href="http://www.sdnap.com/">SDNAP</a></li>
             </ul>
