--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@ by <a class="url fn" href="./author/subond.html">subond</a>
             <h2>构造函数</h2>
 
             <p>Evaluation类没有无参的构造函数，一般用Instances对象作为构造函数的参数。例如：<pre>Evaluation eval = new Evaluation(data)</pre>data是训练集的数据，用来获取一些信息，并不用来评价分类器。</p>
-            <p><img src="Evaluation.jpg"></p>
+            <p><img src="pages/2016/07/03/Evaluation.jpg"></p>
             <h2>主要成员变量</h2>
             <ul>
               <li>evaluationModel(Classifier classifier, Instances data)</li>
@@ -98,8 +98,8 @@ by <a class="url fn" href="./author/subond.html">subond</a>
             <h2>应用实例</h2>
             <p>下面这个小程序用同一数据测试了两类方法的评价结果，源码地址如下<a href="https://github.com/yusubond/Machine-Learning/blob/master/Evaluation/Demo_evaluation.java">Demo_evaluation</a></p>
             <p>结果展示:</p>
-              <img src="evaluationModel.jpg" algin="left">
-              <img src="crossvalidateModel.jpg" algin="left">
+              <img src="pages/2016/07/03/evaluationModel.jpg" algin="left">
+              <img src="pages/2016/07/03/crossvalidateModel.jpg" algin="left">
 
             </ol>
             <h3>参考资料</h3>
