--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@ implemensts java.io.Serializable, RevisionHandler
         <p>也就是说Instances类是继承AbstractList类而来，并实现了Serializable,RevisionHandler接口。</p>
 
         <h2>构造函数</h2>
-        <img src="instances-gouzao.jpg" align="left">
+        <img src="pages/2016/06/29/instances-gouzao.jpg" align="left">
         <p>其构造函数可以实现实例的完整或部分拷贝，也可以创建新的实例，值得注意的是，其读入的数据格式为arff。关于arff的数据格式后续会有介绍。</p>
 
         <h2>主要成员变量</h2>
