--- a/index.html
+++ b/index.html
@@ -434,7 +434,7 @@ $ pelican-quickstart</pre><p>...</p>
                 Social
                 </li>
 
-                <li><a href="https://github.com/yusubond">Github</a></li>
+                <li><a href="https://github.com/yusubond" target="_blank">Github</a></li>
                 <li><a href="http://weibo.com/ybconly">Weibo</a></li>
 
             </ul>
