--- a/index.html
+++ b/index.html
@@ -423,6 +423,7 @@ $ pelican-quickstart</pre><p>...</p>
                 <li><a href="https://gitlab.eurecom.fr/oai/openairinterface5g/wikis/home">OpenAirInterface5g</a></li>
                 <li><a href="http://www.sdnlab.com/">SDNLAB</a></li>
                 <li><a href="http://www.sdnap.com/">SDNAP</a></li>
+                <li><a href="https://bbs.byr.cn/">北邮人论坛</a></li>
             </ul>
             </div>
 
