--- a/index.html
+++ b/index.html
@@ -437,6 +437,7 @@ $ pelican-quickstart</pre><p>...</p>
 
                 <li><a href="https://github.com/yusubond" target="_blank">Github</a></li>
                 <li><a href="http://weibo.com/ybconly" target="_blank">Weibo</a></li>
+                <li><a href="http://weibo.com/ybconly" target="_blank">weibo</a></li>
 
             </ul>
             </div>
