--- a/index.html
+++ b/index.html
@@ -436,7 +436,8 @@ $ pelican-quickstart</pre><p>...</p>
                 </li>
 
                 <li><a href="https://github.com/yusubond" target="_blank">Github</a></li>
-                <li><a href="https://weibo.com/ybconly" target="_blank">Weibo</a></li>
+                <li><a href="http://weibo.com/ybconly" target="_blank">Weibo</a></li>
+                <li><a href="http://weibo.com/u/2136552257">Weibo</a></li>
 
             </ul>
             </div>
