--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <title>Milestone</title>
-    <meta name="description" content="">
+    <meta name="description" content="subond, github">
     <meta name="author" content="Yu Bangchao">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords" content="">
