--- a/index.html
+++ b/index.html
@@ -399,13 +399,13 @@ $ pelican-quickstart</pre><p>...</p>
             </div>
 
 
-            <div class="well" style="padding: 8px 0; background-color: #FBFBFB;">
+            <div class="well" style="padding: 8px 0; background-color: #FBFBFB; width: 300px">
             <ul class="nav nav-list">
                 <li class="nav-header">
                 Categories
                 </li>
 
-                <li><a href="/category/life.html">Life</a></li>
+                <li><a href="/category/life.html">Life23</a></li>
                 <li><a href="/category/tech.html">Tech</a></li>
                 <li><a href="/category/note.html">Note</a></li>
                 <li><a href="/category/tips.html">Tips</a></li>
