--- a/index.html
+++ b/index.html
@@ -381,7 +381,7 @@ $ pelican-quickstart</pre><p>...</p>
         </div>
       </div>
 
-        <div class="span3">
+        <div class="span3" style="width:240px">
 
             <div class="well" style="padding: 8px 0; background-color: #FBFBFB;">
             <ul class="nav nav-list">
@@ -399,13 +399,13 @@ $ pelican-quickstart</pre><p>...</p>
             </div>
 
 
-            <div class="well" style="padding: 8px 0; background-color: #FBFBFB; width: 300px">
+            <div class="well" style="padding: 8px 0; background-color: #FBFBFB;">
             <ul class="nav nav-list">
                 <li class="nav-header">
                 Categories
                 </li>
 
-                <li><a href="/category/life.html">Life23</a></li>
+                <li><a href="/category/life.html">Life33</a></li>
                 <li><a href="/category/tech.html">Tech</a></li>
                 <li><a href="/category/note.html">Note</a></li>
                 <li><a href="/category/tips.html">Tips</a></li>
