--- a/index.html
+++ b/index.html
@@ -381,7 +381,7 @@ $ pelican-quickstart</pre><p>...</p>
         </div>
       </div>
 
-        <div class="span3" style="width:240px">
+        <div class="span3">
 
             <div class="well" style="padding: 8px 0; background-color: #FBFBFB;">
             <ul class="nav nav-list">
