--- a/archives.html
+++ b/archives.html
@@ -40,6 +40,9 @@
         <ul class="nav">
           <li><a href="./author/subond.html">About me</a></li>
         </ul>
+          <form class="navbar-search pull-right" action="/search.html">
+            <input  type="text" class="search-query" placeholder="Search" name="q" id="s">
+          </form>
         </div>
 
     </div>
