--- a/index.html
+++ b/index.html
@@ -41,6 +41,9 @@
         <ul class="nav">
           <li><a href="./author/subond.html">About me</a></li>
         </ul>
+        <ul class="nav">
+          <li><a href="https://github.com/yusubond/Linux-Shell-Script-Program/blob/master/README.md">Shell编程</a></li>
+        </ul>
         <form class="navbar-search pull-right" action="/search.html">
           <input  type="text" class="search-query" placeholder="Search" name="q" id="s">
         </form>
