--- a/tags.html
+++ b/tags.html
@@ -1,24 +1,26 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh">
 <head>
     <meta charset="utf-8">
     <title>Milestone - Tags</title>
     <meta name="description" content="">
-    <meta name="author" content="Yu Bangchao">
+    <meta name="author" content="subond">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- Le HTML5 shim, for IE6-8 support of HTML elements -->
     <!--[if lt IE 9]>
-    <script src="/theme/html5.js"></script>
+    <script src="./theme/html5.js"></script>
     <![endif]-->
 
     <!-- Le styles -->
-    <link href="/theme/bootstrap.min.css" rel="stylesheet">
-    <link href="/theme/bootstrap.min.responsive.css" rel="stylesheet">
-    <link href="/theme/local.css" rel="stylesheet">
-    <link href="/theme/pygments.css" rel="stylesheet">
+    <link href="./theme/bootstrap.min.css" rel="stylesheet">
+    <link href="./theme/bootstrap.min.responsive.css" rel="stylesheet">
+    <link href="./theme/local.css" rel="stylesheet">
+    <link href="./theme/pygments.css" rel="stylesheet">
 
     <!-- So Firefox can bookmark->"abo this site" -->
+        <link href="http://localhost:8005/feeds/all.atom.xml" rel="alternate" title="Milestone" type="application/atom+xml">
+        <link href="http://localhost:8005/feeds/all.rss.xml" rel="alternate" title="Milestone" type="application/rss+xml">
 
 </head>
 
@@ -38,10 +40,11 @@
 
         <div class="nav-collapse">
         <ul class="nav">
-          <li><a href="./author/subond.html">About me</a></li>
+
+            <li><a href="./pages/about-me.html">About Me</a></li>
         </ul>
         <form class="navbar-search pull-right" action="/search.html">
-          <input  type="text" class="search-query" placeholder="Search" name="q" id="s">
+          <input type="text" class="search-query" placeholder="Search" name="q" id="s">
         </form>
         </div>
 
@@ -55,8 +58,23 @@
 
         <div class="span9">
 <ul>
-    <li><a href="/tag/pelican.html">pelican</a></li>
-    <li><a href="/tag/publishing.html">publishing</a></li>
+    <li><a href="./tag/ai.html">AI</a></li>
+    <li><a href="./tag/architecture.html">architecture</a></li>
+    <li><a href="./tag/blog.html">blog</a></li>
+    <li><a href="./tag/cloud.html">Cloud</a></li>
+    <li><a href="./tag/git.html">git</a></li>
+    <li><a href="./tag/gitbook.html">gitbook</a></li>
+    <li><a href="./tag/juju.html">juju</a></li>
+    <li><a href="./tag/linux.html">linux</a></li>
+    <li><a href="./tag/lte.html">lte</a></li>
+    <li><a href="./tag/machinelearning.html">MachineLearning</a></li>
+    <li><a href="./tag/newtork-programming.html">newtork programming</a></li>
+    <li><a href="./tag/nfv.html">NFV</a></li>
+    <li><a href="./tag/orchestration.html">Orchestration</a></li>
+    <li><a href="./tag/pelican.html">pelican</a></li>
+    <li><a href="./tag/process.html">process</a></li>
+    <li><a href="./tag/pthread.html">pthread</a></li>
+    <li><a href="./tag/socket.html">socket</a></li>
 </ul>
         </div>
 
@@ -68,11 +86,13 @@
                 Site
                 </li>
 
-                <li><a href="/archives.html">Archives</a>
-                <li><a href="/tags.html">Tags</a>
+                <li><a href="./archives.html">Archives</a>
+                <li><a href="./tags.html">Tags</a>
 
 
 
+                <li><a href="http://localhost:8005/feeds/all.atom.xml" rel="alternate">Atom feed</a></li>
+                <li><a href="http://localhost:8005/feeds/all.rss.xml" rel="alternate">RSS feed</a></li>
 
             </ul>
             </div>
@@ -84,11 +104,8 @@
                 Categories
                 </li>
 
-                <li><a href="/category/life.html">Life</a></li>
-                <li><a href="/category/tech.html">Tech</a></li>
-                <li><a href="/category/note.html">Note</a></li>
-                <li><a href="/category/tips.html">Tips</a></li>
-
+                <li><a href="./category/note.html">Note</a></li>
+                <li><a href="./category/tech.html">Tech</a></li>
             </ul>
             </div>
 
@@ -98,10 +115,11 @@
                 <li class="nav-header">
                 Links
                 </li>
-                <li><a href="http://www.opensource5g.org">OpenSource5G</a></li>
-                <li><a href="https://gitlab.eurecom.fr/oai/openairinterface5g/wikis/home">OpenAirInterface5g</a></li>
+
+                <li><a href="http://nsq.io/">NSQ</a></li>
+                <li><a href="http://www.infoq.com/cn/">Info</a></li>
                 <li><a href="http://www.sdnlab.com/">SDNLAB</a></li>
-                <li><a href="http://www.sdnap.com/">SDNAP</a></li>
+                <li><a href="https://bbs.byr.cn/">北邮人论坛</a></li>
             </ul>
             </div>
 
@@ -119,16 +137,15 @@
             </div>
             </div>
 
-        </div>
-    </div>     </div>
+        </div>     </div>     </div> 
 <footer>
 <br />
-<p><a href="http://www.subond.com/">Milestone</a> &copy; Yu Bangchao 2016</p>
+<p><a href=".">Milestone</a> &copy; subond 2016</p>
 </footer>
 
 </div> <!-- /container -->
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-<script src="/theme/bootstrap-collapse.js"></script>
-
+<script src="./theme/bootstrap-collapse.js"></script>
+<script>var _gaq=[['_setAccount','UA-45955656-1'],['_trackPageview']];(function(d,t){var g=d.createElement(t),s=d.getElementsByTagName(t)[0];g.src='//www.google-analytics.com/ga.js';s.parentNode.insertBefore(g,s)}(document,'script'))</script>
 </body>
 </html>
