add paxos algorithm

--- a/archives.html
+++ b/archives.html
@@ -63,6 +63,10 @@
 <table class="table">
     <tbody>
         <tr>
+        <td>21 3月 2017</td>
+        <td><a href='./pages/2017/03/21/learn-paxos-in-distributed-system.html'>深入理解Paxos算法</a></td>
+        </tr>
+        <tr>
         <td>03 12月 2016</td>
         <td><a href='./pages/2016/12/03/introduction-about-osm.html'>初识Open Source MANO</a></td>
         </tr>
@@ -186,7 +190,7 @@
         </div>     </div>     </div> 
 <footer>
 <br />
-<p><a href=".">Milestone</a> &copy; subond 2016</p>
+<p><a href=".">Milestone</a> &copy; subond 2017</p>
 </footer>
 
 </div> <!-- /container -->
