--- a/tags.html
+++ b/tags.html
@@ -59,9 +59,11 @@
         <div class="span9">
 <ul>
     <li><a href="./tag/ai.html">AI</a></li>
+    <li><a href="./tag/algorithm.html">Algorithm</a></li>
     <li><a href="./tag/architecture.html">architecture</a></li>
     <li><a href="./tag/blog.html">blog</a></li>
     <li><a href="./tag/cloud.html">Cloud</a></li>
+    <li><a href="./tag/distributed-systems.html">Distributed Systems</a></li>
     <li><a href="./tag/git.html">git</a></li>
     <li><a href="./tag/gitbook.html">gitbook</a></li>
     <li><a href="./tag/juju.html">juju</a></li>
@@ -140,7 +142,7 @@
         </div>     </div>     </div> 
 <footer>
 <br />
-<p><a href=".">Milestone</a> &copy; subond 2016</p>
+<p><a href=".">Milestone</a> &copy; subond 2017</p>
 </footer>
 
 </div> <!-- /container -->
