--- a/archives.html
+++ b/archives.html
@@ -71,6 +71,10 @@
         <td><a href='./pages/2016/12/03/introduction-about-osm.html'>初识Open Source MANO</a></td>
         </tr>
         <tr>
+        <td>15 11月 2016</td>
+        <td><a href='./pages/2016/11/15/something-about-reading-and-writing.html'>读书写作那点事儿</a></td>
+        </tr>
+        <tr>
         <td>10 11月 2016</td>
         <td><a href='./pages/2016/11/10/juju-charm-mechanism.html'>云端服务管理工具:Juju</a></td>
         </tr>
@@ -155,6 +159,7 @@
                 </li>
 
                 <li><a href="./category/note.html">Note</a></li>
+                <li><a href="./category/read.html">Read</a></li>
                 <li><a href="./category/tech.html">Tech</a></li>
             </ul>
             </div>
