--- a/tags.html
+++ b/tags.html
@@ -67,6 +67,7 @@
     <li><a href="./tag/git.html">git</a></li>
     <li><a href="./tag/gitbook.html">gitbook</a></li>
     <li><a href="./tag/juju.html">juju</a></li>
+    <li><a href="./tag/life.html">Life</a></li>
     <li><a href="./tag/linux.html">linux</a></li>
     <li><a href="./tag/lte.html">lte</a></li>
     <li><a href="./tag/machinelearning.html">MachineLearning</a></li>
@@ -76,7 +77,9 @@
     <li><a href="./tag/pelican.html">pelican</a></li>
     <li><a href="./tag/process.html">process</a></li>
     <li><a href="./tag/pthread.html">pthread</a></li>
+    <li><a href="./tag/reading.html">Reading</a></li>
     <li><a href="./tag/socket.html">socket</a></li>
+    <li><a href="./tag/writing.html">Writing</a></li>
 </ul>
         </div>
 
@@ -107,6 +110,7 @@
                 </li>
 
                 <li><a href="./category/note.html">Note</a></li>
+                <li><a href="./category/read.html">Read</a></li>
                 <li><a href="./category/tech.html">Tech</a></li>
             </ul>
             </div>
