--- a/authors.html
+++ b/authors.html
@@ -59,7 +59,7 @@
         <div class="span9">
     <h1>Authors on Milestone</h1>
 
-    <ul>        <li><a href="./author/subond.html">subond</a> (15)</li>
+    <ul>        <li><a href="./author/subond.html">subond</a> (16)</li>
     </ul>
         </div>
 
@@ -90,6 +90,7 @@
                 </li>
 
                 <li><a href="./category/note.html">Note</a></li>
+                <li><a href="./category/read.html">Read</a></li>
                 <li><a href="./category/tech.html">Tech</a></li>
             </ul>
             </div>
