--- a/categories.html
+++ b/categories.html
@@ -59,6 +59,7 @@
         <div class="span9">
 <ul>
 	<li><a href="./category/note.html">Note</li>
+	<li><a href="./category/read.html">Read</li>
 	<li><a href="./category/tech.html">Tech</li>
 </ul>
 
@@ -91,6 +92,7 @@
                 </li>
 
                 <li><a href="./category/note.html">Note</a></li>
+                <li><a href="./category/read.html">Read</a></li>
                 <li><a href="./category/tech.html">Tech</a></li>
             </ul>
             </div>
