--- a/archives.html
+++ b/archives.html
@@ -76,6 +76,10 @@
         <td><a href='./pages/2016/11/10/juju-charm-mechanism.html'>云端服务管理工具:Juju</a></td>
         </tr>
         <tr>
+        <td>07 10 2016</td>
+        <td><a href='./pages/2016/10/07/reply-1988.html'>Reply 1988: 人生是个迷啊</a></td>
+        </tr>
+        <tr>
         <td>03  7 2016</td>
         <td><a href='./pages/2016/07/03/machinelearning-about-weka-evaluation.html'>机器学习之Weka学习-Evaluation类介绍</a></td>
         </tr>
@@ -155,6 +159,7 @@
                 Categories
                 </li>
                 
+                <li><a href="./category/life.html">Life</a></li>
                 <li><a href="./category/note.html">Note</a></li>
                 <li><a href="./category/read.html">Read</a></li>
                 <li><a href="./category/tech.html">Tech</a></li>
