--- a/categories.html
+++ b/categories.html
@@ -55,6 +55,7 @@
 
         <div class="span9">
 <ul>
+	<li><a href="./category/life.html">Life</li>
 	<li><a href="./category/note.html">Note</li>
 	<li><a href="./category/read.html">Read</li>
 	<li><a href="./category/tech.html">Tech</li>
@@ -88,6 +89,7 @@
                 Categories
                 </li>
                 
+                <li><a href="./category/life.html">Life</a></li>
                 <li><a href="./category/note.html">Note</a></li>
                 <li><a href="./category/read.html">Read</a></li>
                 <li><a href="./category/tech.html">Tech</a></li>
