--- a/archives.html
+++ b/archives.html
@@ -80,6 +80,10 @@
         <td><a href='./pages/2016/10/07/reply-1988.html'>Reply 1988: 人生是个迷啊</a></td>
         </tr>
         <tr>
+        <td>12  7 2016</td>
+        <td><a href='./pages/2016/07/12/tip-tools.html'>Ubuntu系统中彻底删除Mysql，并重新安装</a></td>
+        </tr>
+        <tr>
         <td>03  7 2016</td>
         <td><a href='./pages/2016/07/03/machinelearning-about-weka-evaluation.html'>机器学习之Weka学习-Evaluation类介绍</a></td>
         </tr>
@@ -163,6 +167,7 @@
                 <li><a href="./category/note.html">Note</a></li>
                 <li><a href="./category/read.html">Read</a></li>
                 <li><a href="./category/tech.html">Tech</a></li>
+                <li><a href="./category/tips.html">Tips</a></li>
                    
             </ul>
             </div>
