--- a/categories.html
+++ b/categories.html
@@ -59,6 +59,7 @@
 	<li><a href="./category/note.html">Note</li>
 	<li><a href="./category/read.html">Read</li>
 	<li><a href="./category/tech.html">Tech</li>
+	<li><a href="./category/tips.html">Tips</li>
 </ul>
 
         </div>
@@ -93,6 +94,7 @@
                 <li><a href="./category/note.html">Note</a></li>
                 <li><a href="./category/read.html">Read</a></li>
                 <li><a href="./category/tech.html">Tech</a></li>
+                <li><a href="./category/tips.html">Tips</a></li>
                    
             </ul>
             </div>
