--- a/pages/about-me.html
+++ b/pages/about-me.html
@@ -176,6 +176,7 @@
                 <li><a href="../category/note.html">Note</a></li>
                 <li><a href="../category/read.html">Read</a></li>
                 <li><a href="../category/tech.html">Tech</a></li>
+                <li><a href="../category/tips.html">Tips</a></li>
                    
             </ul>
             </div>
