--- a/tags.html
+++ b/tags.html
@@ -76,6 +76,7 @@
     <li><a href="./tag/pthread.html">pthread</a></li>
     <li><a href="./tag/reading.html">Reading</a></li>
     <li><a href="./tag/socket.html">socket</a></li>
+    <li><a href="./tag/tools.html">tools</a></li>
     <li><a href="./tag/writing.html">Writing</a></li>
 </ul>
         </div>
@@ -110,6 +111,7 @@
                 <li><a href="./category/note.html">Note</a></li>
                 <li><a href="./category/read.html">Read</a></li>
                 <li><a href="./category/tech.html">Tech</a></li>
+                <li><a href="./category/tips.html">Tips</a></li>
                    
             </ul>
             </div>
