--- a/archives.html
+++ b/archives.html
@@ -81,7 +81,7 @@
         </tr>
         <tr>
         <td>12  7 2016</td>
-        <td><a href='./pages/2016/07/12/tip-tools.html'>Ubuntu系统中彻底删除Mysql，并重新安装</a></td>
+        <td><a href='./pages/2016/07/12/tip-tools.html'>工作中遇到的小技巧</a></td>
         </tr>
         <tr>
         <td>03  7 2016</td>
