--- a/pages/about-me.html
+++ b/pages/about-me.html
@@ -104,12 +104,13 @@
 <hr size="3px" color="#000000"/>
   <table width="900" height="50" algin="left">
     <tr><td><b>论文</b></td><td><b>Dynamic Resource Orchestration of Service Function Chaining In Network Function Virtualization</b></td><td><b>5GWN(2017)</b></td></tr>
+    <tr><i><b>Bangchao Yu</b>, Wei Zheng, Xiangming Wen, Zhaoming Lu, Luhan Wang, and Lu Ma</i></tr>
   </table>
-    <ul>
-      <li>设计资源编排控制器的监测模块，决策模块与执行模块等，实现虚拟单元的生命周期的管理(资源选择，资源部署，资源监控，资源控制等)</li>
-      <li>设计并实现多目标模拟退火算法，通过对服务单元能耗，负载等信息判断与决策，实现虚拟资源的统一调度与管理</li>
-    </ul>
-  <table width="600" height="50" algin="left">
+  <table width="900" height="50" algin="left">
+    <tr><td><b>论文</b></td><td><b>An efficient and QoS-aware virtual network resource migration algorithm</b></td><td><b>ICCC(2015)</b></td></tr>
+    <tr><i>Lu Ma; Zhaoming Lu; <b>Bangchao Yu</b>; Luhan Wang; Xiangming Wen</i></tr>
+  </table></p>
+<p><table width="600" height="50" algin="left">
     <tr><td><b>专利</b></td><td><b>一种基于SDN的核心网系统及其使用方法(CN105933246A)</b></td></tr>
   </table>
 <p><font size="4"><b>专业技能</b></font></p>
