--- a/archives.html
+++ b/archives.html
@@ -60,6 +60,14 @@
 <table class="table">
     <tbody>
         <tr>
+        <td>09  4 2017</td>
+        <td><a href='./pages/2017/04/09/dynamo-distributed-systems.html'>Dynamo分布式键值系统</a></td>
+        </tr>
+        <tr>
+        <td>06  4 2017</td>
+        <td><a href='./pages/2017/04/06/gfs-distributed-systems.html'>GFS分布式文件系统</a></td>
+        </tr>
+        <tr>
         <td>21  3 2017</td>
         <td><a href='./pages/2017/03/21/learn-paxos-in-distributed-system.html'>深入理解Paxos算法</a></td>
         </tr>
