--- a/tags.html
+++ b/tags.html
@@ -57,12 +57,14 @@
 <ul>
     <li><a href="./tag/ai.html">AI</a></li>
     <li><a href="./tag/algorithm.html">Algorithm</a></li>
+    <li><a href="./tag/amazon.html">Amazon</a></li>
     <li><a href="./tag/architecture.html">architecture</a></li>
     <li><a href="./tag/blog.html">blog</a></li>
     <li><a href="./tag/cloud.html">Cloud</a></li>
     <li><a href="./tag/distributed-systems.html">Distributed Systems</a></li>
     <li><a href="./tag/git.html">git</a></li>
     <li><a href="./tag/gitbook.html">gitbook</a></li>
+    <li><a href="./tag/google.html">Google</a></li>
     <li><a href="./tag/juju.html">juju</a></li>
     <li><a href="./tag/life.html">Life</a></li>
     <li><a href="./tag/linux.html">linux</a></li>
