--- a/tags.html
+++ b/tags.html
@@ -62,6 +62,7 @@
     <li><a href="./tag/blog.html">blog</a></li>
     <li><a href="./tag/cloud.html">Cloud</a></li>
     <li><a href="./tag/distributed-systems.html">Distributed Systems</a></li>
+    <li><a href="./tag/docker.html">Docker</a></li>
     <li><a href="./tag/git.html">git</a></li>
     <li><a href="./tag/gitbook.html">gitbook</a></li>
     <li><a href="./tag/google.html">Google</a></li>
