--- a/archives.html
+++ b/archives.html
@@ -73,7 +73,7 @@
         </tr>
         <tr>
         <td>24  4 2017</td>
-        <td><a href='./pages/2017/04/24/docker-swarm-fu-wu-bu-shu.html'>Docker集群：服务回滚</a></td>
+        <td><a href='./pages/2017/04/24/docker-swarm-fu-wu-hui-gun.html'>Docker集群：服务回滚</a></td>
         </tr>
         <tr>
         <td>22  4 2017</td>
@@ -81,7 +81,7 @@
         </tr>
         <tr>
         <td>20  4 2017</td>
-        <td><a href='./pages/2017/04/20/docker-quickstart.html'>Docker快速上手教程</a></td>
+        <td><a href='./pages/2017/04/20/docker-quickstart.html'>Docker技术：快速上手教程</a></td>
         </tr>
         <tr>
         <td>18  4 2017</td>
