--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
         <ul class="nav">
             
             <li><a href="./pages/about-me.html">About Me</a></li>
+            <li><a href="./pages/about-me.html">About Me</a></li>
         </ul>
         </div>
         
