Update About Me

--- a/pages/about-me.html
+++ b/pages/about-me.html
@@ -62,7 +62,7 @@
     <h2>Bangchao Yu (于邦超)</h2>
 <p>Email:yubc0321@gmail.com<br>
 Github:<a href="https://github.com/yusubond">https://github.com/yusubond</a><br>
-Blog:<a href="www.subond.com">www.subond.com</a></p>
+Blog:<a href="http://www.subond.com">www.subond.com</a></p>
 <p>I am a Master graduate in the School of Information and Communication Engineering of Beijing University of Posts and Telecommunications, advised by Prof. Wei Zheng. I received the B.E. degree from the Beijing University of Chemical Technology.</p>
 <p>My researches mainly focus on the application of Software-Defined Network and Network Function Virtualization in the mobile core network (such as vEPC). And I also involved in the re-design of the overall network architecture and the resource orchestration and Service Function Chaining in the new architecture. In the past work, I have completed the management and orchestration in the core network (vEPC) with Juju (an open source application modeling tool). I have great interests in  MANO (Management and Orchestration0). I have participated in multiple joint develop projects with China Mobile, China Telecom in NFV field.</p>
 <h2>Education</h2>
